--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="demo.css" />
     </head>
     <body>
-        <h1>ESF Demo</h1>
+        <h1 class="page-header">ESF Demo</h1>
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
                 <ul id="navigator">
