--- a/form.html
+++ b/form.html
@@ -29,34 +29,84 @@
                     <form class="ui-form">
                         <fieldset>
                             <legend>表单名称</legend>
-                            <div class="field-row">
-                                <label class="field-label" for="email">邮件地址</label>
-                                <div class="ui-input">
-                                  <input id="email" type="text" placeholder="Email" />
+                            <div class="form-row">
+                                <div class="field">
+                                    <label class="block-label" for="email">邮件地址</label>
+                                    <div class="ui-input">
+                                        <input id="email" type="text" placeholder="Email" />
+                                    </div>
                                 </div>
                             </div>
-                            <div class="field-row">
-                                <label class="field-label" for="password">密码</label>
-                                <div class="ui-input">
-                                  <input id="password" type="password" placeholder="Password" />
+                            <div class="form-row">
+                                <div class="field">
+                                    <label class="block-label" for="password">密码</label>
+                                    <div class="ui-input">
+                                      <input id="password" type="password" placeholder="Password" />
+                                    </div>
                                 </div>
                             </div>
-                            <div class="field-row">
-                                <label class="field-label" for="state">景点</label>
-                                <select id="state">
-                                    <option>长白山</option>
-                                    <option>武夷山</option>
-                                    <option>泰山</option>
-                                </select>
-                            </div>
-                            <div class="field-row">
-                                <div class="ui checkbox">
-                                  <input type="checkbox" id="unique-id">
-                                  <label for="unique-id">记住密码</label>
+                            <div class="form-row">
+                                <div class="field">
+                                    <label class="block-label line" for="state">景点</label>
+                                    <select id="state">
+                                        <option>长白山</option>
+                                        <option>武夷山</option>
+                                        <option>泰山</option>
+                                    </select>
                                 </div>
                             </div>
-                            <div class="field-row">
+                            <div class="form-row">
+                                <div class="field">
+                                    <div class="field-wrapper">
+                                        <div class="ui checkbox">
+                                          <input type="checkbox" id="unique-id">
+                                          <label for="unique-id">记住密码</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
                                 <button type="submit" class="ui-button primary">登录</button> <button type="button" class="ui-button secondary">返回</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                    <h2 id="icons" class="content-subhead">横向表单</h2>
+                    <form class="ui-form">
+                        <fieldset>
+                            <legend>表单名称</legend>
+                            <div class="form-row">
+                                <div class="field ui-g">
+                                    <div class="ui-u-1-12">
+                                        <label for="email" class="inline-label">邮件地址：</label>
+                                    </div>
+                                    <div class="ui-u-11-12">
+                                        <div class="ui-input fluid">
+                                            <input id="email" type="text" placeholder="Email" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="field ui-g">
+                                    <div class="ui-u-1-12">
+                                        <label for="email" class="inline-label">邮件地址：</label>
+                                    </div>
+                                    <div class="ui-u-11-12">
+                                        <div class="ui-input fluid">
+                                            <input id="email" type="text" placeholder="Email" />
+                                        </div>
+                                        <div class="field-wrapper">
+                                        <div class="ui checkbox">
+                                            <input type="checkbox" id="unique-id" />
+                                            <label for="unique-id">记住密码</label>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row align-center">
+                                <button type="submit" class="ui-button primary">登录</button> 
+                                <button type="button" class="ui-button secondary">注册</button>
                             </div>
                         </fieldset>
                     </form>
@@ -64,46 +114,77 @@
                     <form class="ui-form">
                         <fieldset>
                             <legend>复杂点表单</legend>
-                            <div class="field-row">
+                            <div class="form-row">
                                 <div class="ui-g">
                                     <div class="ui-u-1-2">
-                                        <label class="field-label" for="email">邮件地址</label>
+                                        <div class="field">
+                                        <label class="block-label" for="email">First Name</label>
                                         <div class="ui-input fluid">
                                             <input id="email" type="text" placeholder="Email" />
+                                        </div>
                                         </div>
                                     </div>
                                     <div class="ui-u-1-2">
-                                        <label class="field-label" for="email">邮件地址</label>
+                                        <div class="field">
+                                        <label class="block-label" for="email">邮件地址</label>
                                         <div class="ui-input fluid">
                                             <input id="email" type="text" placeholder="Email" />
                                         </div>
+                                        </div>
                                     </div>
                                 </div>
-
-
                             </div>
-                            <div class="field-row">
-                                <label class="field-label" for="password">密码</label>
-                                <div class="ui-input">
-                                  <input id="password" type="password" placeholder="Password" />
+                            <div class="form-row">
+                                <div class="ui-g">
+                                    <div class="ui-u-1-3">
+                                        <div class="field required">
+                                            <label class="block-label" for="email">邮件地址</label>
+                                            <div class="ui-input fluid icon">
+                                                <input id="email" type="text" placeholder="Email" />
+                                                <i class="fa fa-asterisk icon asterisk"></i>
+                                            </div>
+                                            <div class="field-hint">输入邮件地址。</div>
+                                        </div>
+                                    </div>
+                                    <div class="ui-u-1-3">
+                                        <div class="field error">
+                                            <label class="block-label" for="email">邮件地址</label>
+                                            <div class="ui-input fluid icon right">
+                                                <input id="email" type="text" placeholder="Email" />
+                                            </div>
+                                            <div class="field-error">输入邮件地址。</div>
+                                        </div>
+                                    </div>
+                                    <div class="ui-u-1-3">
+                                        <div class="field">
+                                        <label class="block-label" for="email">邮件地址</label>
+                                        <div class="ui-input fluid">
+                                            <input id="email" type="text" placeholder="Email" />
+                                        </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="field-row">
-                                <label class="field-label" for="state">景点</label>
-                                <select id="state">
-                                    <option>长白山</option>
-                                    <option>武夷山</option>
-                                    <option>泰山</option>
-                                </select>
-                            </div>
-                            <div class="field-row">
-                                <div class="ui checkbox">
-                                  <input type="checkbox" id="unique-id">
-                                  <label for="unique-id">记住密码</label>
+                            <div class="form-row">
+                                <div class="field">
+                                    <label class="block-label" for="state">性别</label>
+                                    <select id="state" class="fluid">
+                                        <option>男</option>
+                                        <option>女</option>
+                                        <option>中性</option>
+                                    </select>
                                 </div>
                             </div>
-                            <div class="field-row">
-                                <button type="submit" class="ui-button primary">登录</button> <button type="button" class="ui-button secondary">返回</button>
+                            <div class="form-row">
+                                <div class="field-wrapper">
+                                    <div class="ui checkbox">
+                                      <input type="checkbox" id="submit1">
+                                      <label for="submit1">记住密码</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row submit">
+                                <button type="submit" class="ui-button primary">提交</button>
                             </div>
                         </fieldset>
                     </form>
