update form and links.

--- a/input.html
+++ b/input.html
@@ -13,12 +13,15 @@
             <div class="ui-u-1-5">
                 <ul id="navigator">
                     <li><a href="index.html">Get Started</a></li>
-                    <li><a href="#">Layouts</a></li>
+                    <li><a href="button.html">按钮</a></li>
+                    <li><a href="#">布局网格</a></li>
                     <li><a href="checkbox.html">Checkbox</a></li>
-                    <li><a href="icons.html">Icons</a></li>
-                    <li><a href="input.html">Input</a></li>
-                    <li><a href="label.html">Label</a></li>
-                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="form.html">表单</a></li>
+                    <li><a href="icons.html">图标</a></li>
+                    <li><a href="input.html">输入框</a></li>
+                    <li><a href="label.html">标签</a></li>
+                    <li><a href="menu.html">导航菜单</a></li>
+                    <li><a href="type.html">文字样式</a></li>
                 </ul>
             </div>
             <div class="ui-u-4-5">
@@ -112,7 +115,18 @@
                                     <i class="fa fa-search link icon"></i>
                                 </div>
                             </div>
-                             <div class="mt1">
+                            <h4>Textarea</h4>
+                            <div class="mt1">
+                                <div class="ui-input fluid">
+                                    <textarea placeholder="massive" rows="10"></textarea>
+                                </div>
+                            </div>
+                            <div class="mt1">
+                                <div class="ui-input">
+                                    <textarea placeholder="massive" rows="8" cols="90"></textarea>
+                                </div>
+                            </div>
+                            <div class="mt1">
                                 TODO with action
                             </div>
                         </div>
