--- a/form.html
+++ b/form.html
@@ -15,12 +15,15 @@
             <div class="ui-u-1-5">
                 <ul id="navigator">
                     <li><a href="index.html">Get Started</a></li>
-                    <li><a href="#">Layouts</a></li>
+                    <li><a href="button.html">按钮</a></li>
+                    <li><a href="#">布局网格</a></li>
                     <li><a href="checkbox.html">Checkbox</a></li>
-                    <li><a href="icons.html">Icons</a></li>
-                    <li><a href="input.html">Input</a></li>
-                    <li><a href="label.html">Label</a></li>
-                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="form.html">表单</a></li>
+                    <li><a href="icons.html">图标</a></li>
+                    <li><a href="input.html">输入框</a></li>
+                    <li><a href="label.html">标签</a></li>
+                    <li><a href="menu.html">导航菜单</a></li>
+                    <li><a href="type.html">文字样式</a></li>
                 </ul>
             </div>
             <div class="ui-u-4-5">
@@ -75,7 +78,7 @@
                         <fieldset>
                             <legend>表单名称</legend>
                             <div class="form-row">
-                                <div class="field ui-g">
+                                <div class="field ui-g error">
                                     <div class="ui-u-1-12">
                                         <label for="email" class="inline-label">邮件地址：</label>
                                     </div>
@@ -83,6 +86,7 @@
                                         <div class="ui-input fluid">
                                             <input id="email" type="text" placeholder="Email" />
                                         </div>
+                                        <div class="field-error">输入邮件地址。</div>
                                     </div>
                                 </div>
                             </div>
@@ -104,16 +108,17 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="ui-divider mb1"></div>
                             <div class="form-row align-center">
                                 <button type="submit" class="ui-button primary">登录</button> 
                                 <button type="button" class="ui-button secondary">注册</button>
                             </div>
                         </fieldset>
                     </form>
-                    <h2 id="icons" class="content-subhead">表单和Grid一起</h2>
+                    <h2 id="icons" class="content-subhead">复杂点表单</h2>
                     <form class="ui-form">
                         <fieldset>
-                            <legend>复杂点表单</legend>
+                            <legend>表单名称</legend>
                             <div class="form-row">
                                 <div class="ui-g">
                                     <div class="ui-u-1-2">
@@ -140,7 +145,7 @@
                                         <div class="field required">
                                             <label class="block-label" for="email">邮件地址</label>
                                             <div class="ui-input fluid icon">
-                                                <input id="email" type="text" placeholder="Email" />
+                                                <input id="email" type="text" placeholder="Email" disabled="disabled"  />
                                                 <i class="fa fa-asterisk icon asterisk"></i>
                                             </div>
                                             <div class="field-hint">输入邮件地址。</div>
@@ -157,9 +162,10 @@
                                     </div>
                                     <div class="ui-u-1-3">
                                         <div class="field">
-                                        <label class="block-label" for="email">邮件地址</label>
-                                        <div class="ui-input fluid">
-                                            <input id="email" type="text" placeholder="Email" />
+                                        <label class="block-label" for="dob">出生日期</label>
+                                        <div class="ui-input fluid icon">
+                                            <input id="dob" type="text" placeholder="生日" />
+                                            <i class="fa fa-calendar icon"></i>
                                         </div>
                                         </div>
                                     </div>
@@ -176,13 +182,76 @@
                                 </div>
                             </div>
                             <div class="form-row">
+                                <div class="field">
+                                    <label class="block-label" for="state">职业</label>
+                                    <div class="mb1">
+                                        <div class="ui checkbox">
+                                            <input type="checkbox" id="submit1">
+                                            <label for="submit1">全选</label>
+                                        </div>
+                                    </div>
+                                    <ul class="list-unstyled ml1">
+                                        <li>
+                                            <div class="ui checkbox">
+                                                <input type="checkbox" id="submit1">
+                                                <label for="submit1">教师</label>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="ui checkbox">
+                                              <input type="checkbox" id="submit1" checked="checked" />
+                                              <label for="submit1">码农</label>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="ui checkbox">
+                                              <input type="checkbox" id="submit1">
+                                              <label for="submit1">干啥的</label>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="field">
+                                    <label class="block-label" for="state">收入</label>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <div class="ui radio checkbox">
+                                              <input type="radio" id="unique-id1" name="radio1">
+                                              <label for="unique-id1">1000~2000</label>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="ui radio checkbox">
+                                              <input type="radio" id="unique-id2" name="radio1">
+                                              <label for="unique-id2">2000~3000</label>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="ui radio checkbox">
+                                              <input type="radio" id="unique-id3" name="radio1">
+                                              <label for="unique-id3">3000+</label>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <label class="block-label" for="details">详细信息</label>
+                                <div class="ui-input">
+                                    <textarea id="details" placeholder="massive" rows="8" cols="90"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-row">
                                 <div class="field-wrapper">
                                     <div class="ui checkbox">
-                                      <input type="checkbox" id="submit1">
-                                      <label for="submit1">记住密码</label>
+                                      <input type="checkbox" id="agree">
+                                      <label for="agree">同意<a href="#">服务条款</a></label>
                                     </div>
                                 </div>
                             </div>
+                            <div class="ui-divider mb1"></div>
                             <div class="form-row submit">
                                 <button type="submit" class="ui-button primary">提交</button>
                             </div>
