--- a/form.html
+++ b/form.html
@@ -35,8 +35,8 @@
                             <div class="form-row">
                                 <div class="field">
                                     <label class="block-label" for="email">邮件地址</label>
-                                    <div class="ui-input">
-                                        <input id="email" type="text" placeholder="Email" />
+                                    <div class="field-wrapper">
+                                        静态文字
                                     </div>
                                 </div>
                             </div>
@@ -62,8 +62,8 @@
                                 <div class="field">
                                     <div class="field-wrapper">
                                         <div class="ui checkbox">
-                                          <input type="checkbox" id="unique-id">
-                                          <label for="unique-id">记住密码</label>
+                                          <input type="checkbox" id="save-pwd">
+                                          <label for="save-pwd">记住密码</label>
                                         </div>
                                     </div>
                                 </div>
@@ -93,6 +93,18 @@
                             <div class="form-row">
                                 <div class="field ui-g">
                                     <div class="ui-u-1-12">
+                                        <label for="email" class="inline-label">静态字段：</label>
+                                    </div>
+                                    <div class="ui-u-11-12">
+                                        <div class="field-wrapper">
+                                            测试
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="field ui-g">
+                                    <div class="ui-u-1-12">
                                         <label for="email" class="inline-label">邮件地址：</label>
                                     </div>
                                     <div class="ui-u-11-12">
@@ -100,10 +112,10 @@
                                             <input id="email" type="text" placeholder="Email" />
                                         </div>
                                         <div class="field-wrapper">
-                                        <div class="ui checkbox">
-                                            <input type="checkbox" id="unique-id" />
-                                            <label for="unique-id">记住密码</label>
-                                        </div>
+                                            <div class="ui checkbox">
+                                                <input type="checkbox" id="unique-id" />
+                                                <label for="unique-id">记住密码</label>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -124,9 +136,9 @@
                                     <div class="ui-u-1-2">
                                         <div class="field">
                                         <label class="block-label" for="email">First Name</label>
-                                        <div class="ui-input fluid">
-                                            <input id="email" type="text" placeholder="Email" />
-                                        </div>
+                                            <div class="field-wrapper">
+                                                张三
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="ui-u-1-2">
