--- a/table.html
+++ b/table.html
@@ -26,7 +26,176 @@
             </div>
             <div class="ui-u-4-5">
                 <div id="main" class="content p2 no-pt">
-                    <h2>ESF Getting Started.</h2>
+                    <h2>表格样式</h2>
+                    <table class="ui-table">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Make</th>
+                                <th>Model</th>
+                                <th>Year</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Honda</td>
+                                <td>Accord</td>
+                                <td>2009</td>
+                            </tr>
+
+                            <tr>
+                                <td>2</td>
+                                <td>Toyota</td>
+                                <td>Camry</td>
+                                <td>2012</td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
+                                <td>Hyundai</td>
+                                <td>Elantra</td>
+                                <td>2010</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h2>边框样式</h2>
+                    <table class="ui-table ui-table-bordered">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Make</th>
+                                <th>Model</th>
+                                <th>Year</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Honda</td>
+                                <td>Accord</td>
+                                <td>2009</td>
+                            </tr>
+
+                            <tr>
+                                <td>2</td>
+                                <td>Toyota</td>
+                                <td>Camry</td>
+                                <td>2012</td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
+                                <td>Hyundai</td>
+                                <td>Elantra</td>
+                                <td>2010</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h2>横线样式</h2>
+                    <table class="ui-table ui-table-horizontal">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Make</th>
+                                <th>Model</th>
+                                <th>Year</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Honda</td>
+                                <td>Accord</td>
+                                <td>2009</td>
+                            </tr>
+
+                            <tr>
+                                <td>2</td>
+                                <td>Toyota</td>
+                                <td>Camry</td>
+                                <td>2012</td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
+                                <td>Hyundai</td>
+                                <td>Elantra</td>
+                                <td>2010</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h2>条纹样式</h2>
+                    <table class="ui-table ui-table-striped">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Make</th>
+                                <th>Model</th>
+                                <th>Year</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Honda</td>
+                                <td>Accord</td>
+                                <td>2009</td>
+                            </tr>
+
+                            <tr>
+                                <td>2</td>
+                                <td>Toyota</td>
+                                <td>Camry</td>
+                                <td>2012</td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
+                                <td>Hyundai</td>
+                                <td>Elantra</td>
+                                <td>2010</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h2>悬浮行样式</h2>
+                    <table class="ui-table ui-table-hover">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Make</th>
+                                <th>Model</th>
+                                <th>Year</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Honda</td>
+                                <td>Accord</td>
+                                <td>2009</td>
+                            </tr>
+
+                            <tr>
+                                <td>2</td>
+                                <td>Toyota</td>
+                                <td>Camry</td>
+                                <td>2012</td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
+                                <td>Hyundai</td>
+                                <td>Elantra</td>
+                                <td>2010</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
