--- a/menu.html
+++ b/menu.html
@@ -7,24 +7,22 @@
         <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
-    <body>
-        <h1>Menu</h1>
+    <body class="p2">
+        <h1 class="align-center">Menu</h1>
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <div class="ui-menu vertical">
-                    <ul>
-                        <li><a href="index.html">Get Started</a></li>
-                        <li><a href="button.html">按钮</a></li>
-                        <li><a href="#">布局网格</a></li>
-                        <li><a href="checkbox.html">Checkbox</a></li>
-                        <li><a href="form.html">表单</a></li>
-                        <li><a href="icons.html">图标</a></li>
-                        <li><a href="input.html">输入框</a></li>
-                        <li><a href="label.html">标签</a></li>
-                        <li class="active"><a href="menu.html">导航菜单</a></li>
-                        <li><a href="type.html">文字样式</a></li>
-                    </ul>
-                </div>
+                <ul class="list-unstyled">
+                    <li><a href="index.html">Get Started</a></li>
+                    <li><a href="button.html">按钮</a></li>
+                    <li><a href="#">布局网格</a></li>
+                    <li><a href="checkbox.html">Checkbox</a></li>
+                    <li><a href="form.html">表单</a></li>
+                    <li><a href="icons.html">图标</a></li>
+                    <li><a href="input.html">输入框</a></li>
+                    <li><a href="label.html">标签</a></li>
+                    <li class="active"><a href="menu.html">导航菜单</a></li>
+                    <li><a href="type.html">文字样式</a></li>
+                </ul>
             </div>
             <div class="ui-u-4-5">
                 <div id="main" class="content p2 no-pt">
