--- a/checkbox.html
+++ b/checkbox.html
@@ -7,11 +7,11 @@
         <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
-    <body>
-        <h1>Checkbox</h1>
+    <body class="p2">
+        <h1 class="align-center">Checkbox</h1>
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator">
+                <ul id="navigator" class="list-unstyled">
                     <li><a href="index.html">Get Started</a></li>
                     <li><a href="button.html">按钮</a></li>
                     <li><a href="#">布局网格</a></li>
