--- a/form.html
+++ b/form.html
@@ -7,13 +7,11 @@
         <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
-    <body>
-        <div class="page-header p1"> 
-            <h1>表单</h1>
-        </div>
+    <body class="p2">
+        <h1 class="align-center">表单</h1>
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
-                <ul id="navigator">
+                <ul id="navigator" class="list-unstyled">
                     <li><a href="index.html">Get Started</a></li>
                     <li><a href="button.html">按钮</a></li>
                     <li><a href="#">布局网格</a></li>
