--- a/index.html
+++ b/index.html
@@ -7,28 +7,76 @@
         <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
-    <body>
-        <h1 class="page-header">ESF Demo</h1>
-        <div id="layout" class="ui-g">
-            <div class="ui-u-1-5">
-                <ul id="navigator">
-                    <li><a href="index.html">Get Started</a></li>
-                    <li><a href="button.html">按钮</a></li>
-                    <li><a href="#">布局网格</a></li>
-                    <li><a href="checkbox.html">Checkbox</a></li>
-                    <li><a href="form.html">表单</a></li>
-                    <li><a href="icons.html">图标</a></li>
-                    <li><a href="input.html">输入框</a></li>
-                    <li><a href="label.html">标签</a></li>
-                    <li><a href="menu.html">导航菜单</a></li>
-                    <li><a href="type.html">文字样式</a></li>
-                </ul>
-            </div>
-            <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
-                    <h2>ESF Getting Started.</h2>
+    <body class="">
+        <header class="est-header" role="banner">
+            <a id="leftmenu-trigger" class="ui-button header-button right-menu-separator" title="Toggle Sidebar">
+                <i class="fa fa-navicon"></i>
+            </a>
+            <a id="rightmenu-trigger" class="ui-button header-button pull-right left-menu-separator">
+                <i class="fa fa-navicon"></i>
+            </a>
+            <div class="pull-right">
+                <div class="ui-menu horizontal nav">
+                    <ul>
+                        <li>
+                            <a href="#"><i class="fa fa-magic"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-level-down"></i></a></li>
+                        <li><a href="#"><i class="fa fa-bell"></i></a></li>
+                        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                    </ul>
                 </div>
             </div>
+            <h1 class="brand-title ml1">
+                <a class="navbar-brand" href="index.php"><img src="img/logo.png" /></a>
+            </h1>
+        </header>
+        <div class="est-body">
+            <div id="left-nav">
+                <div class="ui-menu vertical nav">
+                    <ul id="navigator">
+                        <li class="active"><a href="home.html" target="container-frame"><i class="fa fa-home"></i></a></li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-check-square"></i>
+                            </a>
+                            <ul class="ui-dropdown flyout right">
+                                <li><a href="button.html" target="container-frame">按钮</a></li>
+                                <li><a href="checkbox.html" target="container-frame">Checkbox</a></li>
+                                <li><a href="input.html" target="container-frame">输入框</a></li>
+                                <li><a href="form.html" target="container-frame">表单</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="menu.html" target="container-frame"><i class="fa fa-anchor"></i></a></li>
+                        <li><a href="icons.html" target="container-frame"><i class="fa fa-file-image-o"></i></a></li>
+                        <li><a href="type.html" target="container-frame"><i class="fa fa-text-height"></i></a></li>
+                        <li><a href="label.html" target="container-frame"><i class="fa fa-font"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="content-container">
+                <div id="header">
+
+                </div>
+                <div id="content">
+                    <iframe id="container-frame" name="container-frame" src="home.html" seamless="seamless">
+                    </iframe>
+                </div>
+            </div>
+            <footer id="page-footer" role="contentinfo">
+                <div class="clearfix align-center">
+                    <button class="pull-right ui-button" id="back-to-top"><i class="fa fa-arrow-up"></i></button>
+                    百度 © 2014
+                </div>
+            </footer>
         </div>
     </body>
+    <script>
+        (function () {
+            var h = (Math.max(document.documentElement.clientHeight, window.innerHeight || 0) - 60 - 42) + 'px';
+            document.getElementById('content').style.height = h;
+            //document.getElementById('container-frame').style.height = h;
+        })();
+        
+    </script>
 </html>
