--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <h1 class="brand-title ml1">
-                <a class="navbar-brand" href="index.php"><img src="img/logo.png" /></a>
+                <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" /></a>
             </h1>
         </header>
         <div class="est-body">
