clean up button definition.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     </head>
     <body class="">
         <header class="est-header" role="banner">
-            <a id="leftmenu-trigger" class="ui-button header-button right-menu-separator" title="Toggle Sidebar">
-                <i class="fa fa-navicon"></i>
-            </a>
-            <a id="rightmenu-trigger" class="ui-button header-button pull-right left-menu-separator">
+            <a id="leftmenu-trigger" class="ui-button ui-button-primary header-button right-menu-separator pull-left" title="Toggle Sidebar">
                 <i class="fa fa-navicon"></i>
             </a>
             <div class="pull-right">
@@ -65,7 +62,7 @@
             </div>
             <footer id="page-footer" role="contentinfo">
                 <div class="clearfix align-center">
-                    <button class="pull-right ui-button" id="back-to-top"><i class="fa fa-arrow-up"></i></button>
+                    <button class="pull-right ui-button ui-button-primary" id="back-to-top"><i class="fa fa-arrow-up"></i></button>
                     百度 © 2014
                 </div>
             </footer>
