--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <div class="ui-menu vertical nav">
                     <ul id="navigator">
                         <li class="active"><a href="home.html" target="container-frame"><i class="fa fa-home"></i></a></li>
+                        <li title="CSS 栅格"><a href="css-grid.html" target="container-frame"><i class="fa fa-desktop"></i></a></li>
+                        <li title="table"><a href="table.html" target="container-frame"><i class="fa fa-table"></i></a></li>
                         <li>
                             <a href="#">
                                 <i class="fa fa-check-square"></i>
