menu change. demo code generation.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="left-nav">
                 <div class="ui-menu vertical nav">
                     <ul id="navigator">
-                        <li class="active"><a href="home.html" target="container-frame"><i class="fa fa-home"></i></a></li>
+                        <li title="介绍"><a href="home.html" target="container-frame"><i class="fa fa-home"></i></a></li>
                         <li title="CSS 栅格"><a href="css-grid.html" target="container-frame"><i class="fa fa-desktop"></i></a></li>
                         <li title="table"><a href="table.html" target="container-frame"><i class="fa fa-table"></i></a></li>
                         <li>
@@ -76,6 +76,5 @@
             document.getElementById('content').style.height = h;
             //document.getElementById('container-frame').style.height = h;
         })();
-        
     </script>
 </html>
