--- a/checkbox.html
+++ b/checkbox.html
@@ -29,28 +29,28 @@
                     <h2 id="icons" class="content-subhead">类型</h2>
                     <div>
                         <h3>Checkbox</h3>
-                        <div class="ui checkbox">
+                        <div class="ui-checkbox">
                           <input type="checkbox" id="unique-id">
                           <label for="unique-id">Poodle</label>
                         </div>
                         <h3>Slider</h3>
-                        <div class="ui slider checkbox">
+                        <div class="ui-slider">
                             <input type="checkbox" name="walk" id="slider" />
                             <label for="slider">Allow others to see when your dog is on a walk</label>
                         </div>
                         <h3>toggle</h3>
-                        <div class="ui toggle checkbox">
+                        <div class="ui-toggle">
                             <input type="checkbox" name="walk" id="toggle" />
                             <label for="toggle">Allow others to see when your dog is on a walk</label>
                         </div>
                     </div>
                     <h2 id="icons" class="content-subhead">Radio</h2>
                     <h3>Radio</h3>
-                    <div class="ui radio checkbox">
+                    <div class="ui-radio">
                       <input type="radio" id="unique-id3" name="radio1" />
                       <label for="unique-id3">Radio</label>
                     </div>
-                    <div class="ui radio checkbox">
+                    <div class="ui-radio">
                       <input type="radio" id="unique-id4" name="radio1" />
                       <label for="unique-id4"></label>
                     </div>
