--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,7 @@
                     <li><a href="#menu-vetical">纵向菜单</a></li>
                     <li><a href="#menu-vetical-hoverable">纵向菜单附加Hover下拉</a></li>
                     <li><a href="#menu-separator">分割线</a></li>
+                    <li><a href="#dropdown">下拉</a></li>
                 </ul>
             </div>
             <div class="ui-u-4-5">
@@ -129,6 +130,26 @@
                                 <li class="ui-menu-item"><a href="#">Disabled</a></li>
                             </ul>
                         </div>
+                    </div>
+                    <h3 id="dropdown">下拉列表</h3>
+                    <div class="example">
+                        <button class="ui-button ui-button-secondary">下拉按钮 <i class="fa fa-caret-down"></i></button>
+                        <ul class="ui-dropdown" style="width: 20%;">
+                            <li><a href="#">First</a></li>
+                            <li><a href="#">Second</a></li>
+                            <li><a href="#">Third</a></li>
+                        </ul>
+                        <button class="ui-button ui-button-secondary">下拉按钮 <i class="fa fa-caret-down"></i></button>
+                        <ul class="ui-dropdown" style="width: 20%;">
+                            <li class="heading separator-below">标题</li>
+                            <li><a href="#">First</a></li>
+                            <li><a href="#">Second</a></li>
+                            <li class="separator-below"><a href="#">Third</a></li>
+                            <li class="heading separator-below">标题2</li>
+                            <li><a href="#">First</a></li>
+                            <li><a href="#">Second</a></li>
+                            <li><a href="#">Third</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
